test/errors/error29.base
The array is empty
fun foo() {
  val x = [];
          ^
